--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-es6-template-engine": "^2.2.3"
+    "express-es6-template-engine": "^2.2.3",
+    "helmet": "^4.4.1",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1"
   }
 }
